--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,3 +1,7 @@
+// Embedded icons from Open Iconic.
+// Released under MIT and copyright 2014 Waybury.
+// https://github.com/iconic/open-iconic
+
 // Options
 // =====
 // Quickly modify global styling by enabling or disabling optional features.
@@ -556,8 +560,7 @@ $btn-transition:            color .15s ease-in-out, background-color .15s ease-i
 $input-transition:          background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $modal-transition:          transform .3s ease-out !default;
 $progress-bar-transition:   width .3s ease !default;
-$switch-transition:         all .15s ease !default;
-
+$switch-transition:         all .15s ease-in-out !default;
 
 // Radius utility
 // =====
@@ -730,139 +733,139 @@ $input-line-height:             $btn-line-height !default;
 $input-padding-y:               $btn-padding-y !default;
 $input-padding-x:               $btn-padding-x !default;
 
-$input-color:                   $uibase-700 !default;
 $input-bg:                      $white !default;
+$input-color:                   $uibase-700 !default;
 $input-border-color:            $uibase-200 !default;
 $input-border-width:            $border-width !default;
 $input-border-radius:           $border-radius !default;
 $input-box-shadow:              map-get($shadows, "i1") !default;
 
-$input-focus-color:             $input-color !default;
 $input-focus-bg:                $input-bg !default;
+$input-focus-color:             $input-color !default;
 $input-focus-border-color:      palette($primary, 300) !default;
 $input-focus-box-shadow-size:   0 0 0 .1875rem !default;
 $input-focus-box-shadow-alpha:  .35 !default;
 $input-focus-box-shadow:        $input-focus-box-shadow-size rgba($component-active-bg, $input-focus-box-shadow-alpha) !default;
 
-$input-disabled-color:          $component-disabled-color !default;
 $input-disabled-bg:             $uibase-50 !default;
+$input-disabled-color:          $component-disabled-color !default;
+$input-disabled-border-color:   null !default;
+$input-disabled-opacity:        1 !default;
 
 $input-placeholder-color:       #999 !default;
 
-$input-label-font-weight:       $font-weight-normal !default;
+$input-static-color:            $body-color !default;
+
+$form-label-font-weight:        $font-weight-normal !default;
 
 $form-text-margin-top:          .25rem !default;
 
-$form-check-input-gutter:       1.25rem !default;
-$form-check-input-margin-y:     .3125rem !default;
-$form-check-input-margin-x:     .25rem !default;
-$form-check-inline-margin-x:    .75rem !default;
-$form-check-disabled-color:     $component-disabled-color !default;
-$form-check-inline-input-margin-x: .3125rem !default;
-
 $form-group-margin-bottom:      1rem !default;
-$form-row-gutter:               .3125rem !default;
+$form-row-gutter-width:         .625rem !default;
 
-$form-inline-breakpoint:         sm !default;
+$form-inline-breakpoint:        sm !default;
+$form-inline-check-margin-x:    .25em !default;
 
-// Custom form controls
-// =====
-// Custom checkbox/radio
-$custom-control-gutter:                 1.5rem !default;
-$custom-control-inline-margin-x:        .75rem !default;
+// Form check
+$form-check-gutter:                 1.25em !default;
+$form-check-margin-bottom:          .25rem !default;
+$form-check-label-disabled-opacity: .6 !default;
 
-$custom-control-indicator-size:         1rem !default;
-$custom-control-indicator-bg:           $uibase-50 !default;
-$custom-control-indicator-bg-size:      50% 50% !default;
-$custom-control-indicator-box-shadow:   map-get($shadows, "i1") !default;
-$custom-control-indicator-border-width: $border-width !default;
-$custom-control-indicator-border-color: $input-border-color !default;
+// Form checkradio
+$form-checkradio-size:                      1em !default;
+$form-checkradio-gutter:                    calc(#{$form-checkradio-size} + .375em) !default;
+$form-checkradio-bg:                        $white !default;
+$form-checkradio-border-width:              $border-width !default;
+$form-checkradio-border-color:              $input-border-color !default;
+$form-checkradio-box-shadow:                null !default;
+$form-checkradio-icon-size:                 calc(#{$form-checkradio-size} - .375em) !default;
 
-$custom-control-disabled-indicator-opacity:  .6 !default;
-$custom-control-disabled-description-color:  $uibase-400 !default;
+$form-checkradio-focus-border-color:        $input-focus-border-color !default;
+$form-checkradio-focus-box-shadow:          $input-focus-box-shadow !default;
 
-$custom-control-checked-indicator-bg:         $primary !default;
-$custom-control-checked-indicator-color:      color-if-contrast($white, $custom-control-checked-indicator-bg) !default;
-$custom-control-checked-indicator-box-shadow: none !default;
-$custom-control-checked-indicator-border-color: $primary !default;
+$form-checkradio-checked-bg:                $primary !default;
+$form-checkradio-checked-color:             $white !default;
+$form-checkradio-checked-border-color:      $primary !default;
 
-$custom-control-focus-indicator-box-shadow:  $input-focus-box-shadow !default;
+$form-checkradio-checkbox-border-radius:    $border-radius !default;
+$form-checkradio-checkbox-icon:             str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#{$form-checkradio-checked-color}' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"), "#", "%23") !default;
 
-$custom-control-active-indicator-bg:         $custom-control-checked-indicator-bg !default;
-$custom-control-active-indicator-color:      $custom-control-checked-indicator-color !default;
+$form-checkradio-radio-border-radius:       50% !default;
+$form-checkradio-radio-icon:                str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='#{$form-checkradio-checked-color}'/%3e%3c/svg%3e"), "#", "%23") !default;
 
-$custom-checkbox-radius:                    $border-radius !default;
-$custom-checkbox-checked-icon:              str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-checkbox-indeterminate-bg:          $primary !default;
-$custom-checkbox-indeterminate-icon:        str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-checkbox-indeterminate-box-shadow:  none !default;
+$form-checkradio-indeterminate-bg:          $primary !default;
+$form-checkradio-indeterminate-icon:        str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='#{$form-checkradio-checked-color}' d='M0 2h4'/%3e%3c/svg%3e"), "#", "%23") !default;
 
-$custom-radio-radius:               50% !default;
-$custom-radio-checked-icon:         str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"), "#", "%23") !default;
+// Form switch
+$form-switch-width:                         1.75em !default;
+$form-switch-gutter:                        calc(#{$form-switch-width} + .375em) !default;
 
-$custom-switch-gutter:              2.5rem !default;
-$custom-switch-width:               2rem !default;
-$custom-switch-track-height:        1rem !default;
-$custom-switch-track-bg:            $uibase-50 !default;
-$custom-switch-track-radius:        1rem !default;
-$custom-switch-track-border-width:  $border-width !default;
-$custom-switch-track-border-color:  $input-border-color !default;
-$custom-switch-track-box-shadow:    map-get($shadows, "i1") !default;
+$form-switch-track-height:                  1em !default;
+$form-switch-track-bg:                      $white !default;
+$form-switch-track-border-width:            $input-border-width !default;
+$form-switch-track-border-color:            $input-border-color !default;
+$form-switch-track-border-radius:           1em !default;
+$form-switch-track-box-shadow:              null !default;
 
-$custom-switch-thumb-width:         1rem !default;
-$custom-switch-thumb-height:        1rem !default;
-$custom-switch-thumb-bg:            $uibase-300 !default;
-$custom-switch-thumb-radius:        10rem !default;
-$custom-switch-thumb-border-width:  $border-width !default;
-$custom-switch-thumb-border-color:  $custom-switch-thumb-bg !default;
-$custom-switch-thumb-box-shadow:    none !default;
+$form-switch-track-focus-bg:                null !default;
+$form-switch-track-focus-border-color:      $input-focus-border-color !default;
+$form-switch-track-focus-box-shadow:        $input-focus-box-shadow !default;
 
-$custom-switch-checked-track-bg:            $uibase-50 !default;
-$custom-switch-checked-track-border-color:  $uibase-300 !default;
-$custom-switch-active-track-bg:             $uibase-50 !default;
+$form-switch-track-checked-bg:              $white !default;
+$form-switch-track-checked-border-color:    $primary !default;
 
-$custom-switch-checked-thumb-bg:            $primary !default;
-$custom-switch-checked-thumb-border-color:  $primary !default;
-$custom-switch-active-thumb-bg:             palette($primary, 400) !default;
-$custom-switch-disabled-thumb-bg:           $uibase-200 !default;
-$custom-switch-disabled-checked-thumb-bg:   palette($primary, 200) !default;
+$form-switch-thumb-offset:                  calc(.25em - #{$form-switch-track-border-width}) !default;
+$form-switch-thumb-width:                   .625em !default;
+$form-switch-thumb-height:                  .625em !default;
+$form-switch-thumb-bg:                      $uibase-300 !default;
+$form-switch-thumb-border-width:            $border-width !default;
+$form-switch-thumb-border-color:            $form-switch-thumb-bg !default;
+$form-switch-thumb-border-radius:           50% !default;
+$form-switch-thumb-box-shadow:              null !default;
 
-// Custom select
-$custom-select-indicator-offset:    .375rem !default;
-$custom-select-indicator-width:     10px !default; // In pixels because image dimensions
-$custom-select-indicator-height:    10px !default; // In pixels because image dimensions
-$custom-select-indicator-image:     str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23333' d='M3 0l-3 3h6l-3-3zm-3 5l3 3 3-3h-6z'/%3e%3c/svg%3e"), "#", "%23") !default;
-$custom-select-indicator:           $custom-select-indicator-image no-repeat right $custom-select-indicator-offset center / $custom-select-indicator-width $custom-select-indicator-height !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+$form-switch-thumb-focus-bg:                palette($primary, 300) !default;
+$form-switch-thumb-focus-border-color:      $form-switch-thumb-focus-bg !default;
+$form-switch-thumb-focus-box-shadow:        null !default;
 
-// Custom file
-$custom-file-button-color:          $uibase-600 !default;
-$custom-file-button-bg:             $uibase-50 !default;
-$custom-file-button-disabled-opacity: .6 !default;
-$custom-file-text: (
-    en: "Browse"
-) !default;
+$form-switch-thumb-checked-bg:              $primary !default;
+$form-switch-thumb-checked-border-color:    $primary !default;
 
-// Custom range
-$custom-range-track-height:         .5rem !default;
-$custom-range-track-cursor:         pointer !default;
-$custom-range-track-bg:             $uibase-100 !default;
-$custom-range-track-border:         0 !default;
-$custom-range-track-border-radius:  $custom-range-track-height !default;
-$custom-range-track-box-shadow:     map-get($shadows, "i1") !default;
+// Form select
+$form-select-indicator-offset:      .375em !default;
+$form-select-indicator-width:       .75em !default;
+$form-select-indicator-height:      .75em !default;
+$form-select-indicator-color:       rgba($uibase-700, .85) !default;
+$form-select-indicator-image:       str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#{$form-select-indicator-color}' d='M3 0l-3 3h6l-3-3zm-3 5l3 3 3-3h-6z'/%3e%3c/svg%3e"), "#", "%23") !default;
+$form-select-indicator:             $form-select-indicator-image no-repeat right $form-select-indicator-offset center / $form-select-indicator-width $form-select-indicator-height !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 
-$custom-range-thumb-width:                  1.125rem !default;
-$custom-range-thumb-height:                 $custom-range-thumb-width !default;
-$custom-range-thumb-bg:                     $component-active-bg !default;
-$custom-range-thumb-border:                 0 !default;
-$custom-range-thumb-border-radius:          50% !default;
-$custom-range-thumb-box-shadow:             map-get($shadows, "d1") !default;
-$custom-range-thumb-focus-box-shadow:       $input-focus-box-shadow !default;
-$custom-range-thumb-focus-box-shadow-width: .1875rem !default;
-$custom-range-thumb-active-bg:              palette($component-active-bg, 600) !default;
-$custom-range-thumb-disabled-bg:            $uibase-300 !default;
+// Form file
+$form-file-button-color:            $uibase-600 !default;
+$form-file-button-bg:               $uibase-50 !default;
+$form-file-button-disabled-color:   $component-disabled-color !default;
+$form-file-button-disabled-bg:      $uibase-50 !default;
+$form-file-button-disabled-opacity: 1 !default;
 
-$custom-range-height:               $custom-range-thumb-height + ($custom-range-thumb-focus-box-shadow-width * 2) !default;
-$custom-range-min-width:            8rem !default;  // Browser default seems to be 129px/~8rem for IE/Chrome/Safari
+// Form range input
+$form-range-track-height:           .5em !default;
+$form-range-track-cursor:           pointer !default;
+$form-range-track-bg:               $uibase-100 !default;
+$form-range-track-border:           0 !default;
+$form-range-track-border-radius:    $form-range-track-height !default;
+$form-range-track-box-shadow:       map-get($shadows, "i1") !default;
+
+$form-range-thumb-width:                  1.125em !default;
+$form-range-thumb-height:                 $form-range-thumb-width !default;
+$form-range-thumb-bg:                     $primary !default;
+$form-range-thumb-border:                 0 !default;
+$form-range-thumb-border-radius:          50% !default;
+$form-range-thumb-box-shadow:             map-get($shadows, "d1") !default;
+$form-range-thumb-focus-box-shadow:       $input-focus-box-shadow !default;
+$form-range-thumb-focus-box-shadow-width: .1875rem !default;
+$form-range-thumb-active-bg:              palette($primary, 600) !default;
+$form-range-thumb-disabled-bg:            $uibase-300 !default;
+
+$form-range-height:                 calc(#{$form-range-thumb-height} + (#{$form-range-thumb-focus-box-shadow-width} * 2)) !default;
+$form-range-min-width:              8rem !default;  // Browser default seems to be 129px/~8rem for IE/Chrome/Safari
 
 // Form validation
 // =====
@@ -872,9 +875,9 @@ $form-feedback-font-size:       $small-font-size !default;
 $form-feedback-valid-color:     map-get($base-colors, "success") !default;
 $form-feedback-invalid-color:   map-get($base-colors, "danger") !default;
 
-$form-feedback-icon-offset:         .375rem !default;
-$form-feedback-icon-width:          16px !default; // In pixels because image dimensions
-$form-feedback-icon-height:         16px !default; // In pixels because image dimensions
+$form-feedback-icon-offset:         .25em !default;
+$form-feedback-icon-width:          1em !default;
+$form-feedback-icon-height:         1em !default;
 
 $form-feedback-icon-valid-color:    $form-feedback-valid-color !default;
 $form-feedback-icon-valid-image:    str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='#{$form-feedback-icon-valid-color}' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e"), "#", "%23") !default;
