--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -385,6 +385,7 @@ $h6-font-size:  ($font-size-base * 1) !default;
 
 $headings-margin-bottom:    ($spacer / 2) !default;
 $headings-font-family:      null !default;
+$headings-font-style:       null !default;
 $headings-font-weight:      600 !default;
 $headings-line-height:      1.25 !default;
 $headings-color:            null !default;
