--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -2,8 +2,7 @@
 
     @if $enable-transitions and $enable-progress-animated {
         @keyframes progress-bar-stripes {
-            from { background-position: $progress-height 0; }
-            to { background-position: 0 0; }
+            0% { background-position-x: $progress-height; }
         }
     }
 
