--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -16,14 +16,14 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-3 col-xl-2 cf-sidebar">
+            <div class="col-md-3 col-xl-2 cf-sidebar">
                 {% include nav-sidebar.html %}
             </div>
 
             <nav class="d-none d-xl-block col-xl-2 cf-toc" aria-label="Page navigation">
             </nav>
 
-            <main class="col-12 col-md-9 col-xl-8 cf-content" role="main">
+            <main class="col-md-9 col-xl-8 cf-content" role="main">
                 <h1 class="cf-title" id="content">
                     {{ page.title }}
                     {% if page.subtitle %}
