Input Group: Use `flex-basis` instead of `width`

--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -11,10 +11,7 @@
         > .form-control,
         > .form-file {
             position: relative;  // Needed for z-index on focus/active state
-            flex: 1 1 auto;
-            // Add width 1% and flex-basis auto to ensure that button will not wrap out
-            // the column. Applies to IE Edge+ and Firefox. Chrome does not require this.
-            width: 1%;
+            flex: 1 1 0%;
             margin-bottom: 0;
             margin-left: -$input-border-width;
 
