--- a/scss/utilities/_screen-reader.scss
+++ b/scss/utilities/_screen-reader.scss
@@ -42,7 +42,7 @@
         // Skip largest breakpoint for down (equivalent to `.sr-only`)
         @if $enable-utility-sronly-responsive-down {
             @if breakpoint-max($bp, $grid-breakpoints) != null {
-                @include media-breakpoint-up($bp) {
+                @include media-breakpoint-down($bp) {
                     %sr-only-#{$bp}-down {
                         @include sr-only();
                     }
