--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -32,7 +32,7 @@
         </ul>
     </div>
 
-    <ul class="navbar-nav cf-header-social">
+    <ul class="navbar-nav ms-auto cf-header-social">
         <li class="nav-item dropdown dropdown-menu-reverse me-1">
             <a href="#" role="button" class="nav-link pe-0" data-cfw="dropdown">
                 v{{ site.docs_version }}
