Move `forms.scss` to proper location

--- a/scss/figuration.scss
+++ b/scss/figuration.scss
@@ -24,7 +24,7 @@
 @import "core/code";
 @import "core/images";
 @import "core/tables";
-@import "core/forms";
+@import "forms";
 @import "core/buttons";
 
 // Components - additional functionality and layout
