--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -55,6 +55,10 @@
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/{{ site.docs_version }}/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
 
+<!-- Popper -->
+<script src="{{ site.cdn.popper }}" integrity="{{ site.cdn.popper_hash }}" crossorigin="anonymous"></script>
+<script>typeof Popper === 'undefined' || document.write('<script src="{{ site.baseurl }}/{{ site.docs_version }}/assets/js/vendor/popper.min.js"><\/script>')</script>
+
 <!-- Core JS -->
 {% if site.github -%}
   <script src="{{ site.baseurl }}/{{ site.docs_version }}/dist/js/figuration.min.js"></script>
