mostly working with tooltips

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1180,7 +1180,8 @@ $tooltip-close-opacity:         $close-opacity !default;
 $tooltip-close-hover-color:     $tooltip-color !default;
 $tooltip-close-hover-opacity:   $close-hover-opacity !default;
 
-$tooltip-arrow-width:           .375rem !default;
+$tooltip-arrow-width:           .75rem !default;
+$tooltip-arrow-height:          .375rem !default;
 $tooltip-arrow-color:           $tooltip-bg !default;
 
 
