--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -15,6 +15,7 @@
         border: $popover-border-width solid $popover-border-color;
         @include border-radius($popover-border-radius);
         @include box-shadow($popover-box-shadow);
+        outline: 0;
 
         // Offset the popover to account for the popover arrow
         @if $enable-popover-arrow {
