--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -3,75 +3,19 @@
         position: absolute;
         z-index: $zindex-tooltip;
         display: block;
+        margin: $tooltip-margin;
         // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
         // So reset our font and text properties to avoid inheriting weird values.
         @include reset-text();
         @include font-size($tooltip-font-size);
         // Allow breaking very long words so they don't overflow the tooltip's bounds
         word-wrap: break-word;
+        outline: 0;
         opacity: 0;
 
         // Showing
         &.in {
             opacity: $tooltip-opacity;
-        }
-
-        // Directions
-        &.top {
-            @if $enable-tooltip-arrow {
-                padding: $tooltip-arrow-width 0;
-            }
-            margin-top: -$tooltip-margin;
-        }
-        &.forward {
-            @if $enable-tooltip-arrow {
-                padding: 0 $tooltip-arrow-width;
-            }
-            margin-left: $tooltip-margin #{"/*rtl:"}-$tooltip-margin#{"*/"};
-        }
-        &.bottom {
-            @if $enable-tooltip-arrow {
-                padding: $tooltip-arrow-width 0;
-            }
-            margin-top: $tooltip-margin;
-        }
-        &.reverse {
-            @if $enable-tooltip-arrow {
-                padding: 0 $tooltip-arrow-width;
-            }
-            margin-left: -$tooltip-margin #{"/*rtl:"}$tooltip-margin#{"*/"};
-        }
-
-        // Arrows
-        @if $enable-tooltip-arrow {
-            &.top .tooltip-arrow {
-                bottom: 0;
-                left: 50% #{"/*rtl:ignore*/"};
-                margin-left: -$tooltip-arrow-width;
-                border-top-color: $tooltip-arrow-color;
-                border-bottom-width: 0;
-            }
-            &.forward .tooltip-arrow {
-                top: 50%;
-                left: 0;
-                margin-top: -$tooltip-arrow-width;
-                border-right-color: $tooltip-arrow-color;
-                border-left-width: 0;
-            }
-            &.reverse .tooltip-arrow {
-                top: 50%;
-                right: 0;
-                margin-top: -$tooltip-arrow-width;
-                border-right-width: 0;
-                border-left-color: $tooltip-arrow-color;
-            }
-            &.bottom .tooltip-arrow {
-                top: 0;
-                left: 50% #{"/*rtl:ignore*/"};
-                margin-left: -$tooltip-arrow-width;
-                border-top-width: 0;
-                border-bottom-color: $tooltip-arrow-color;
-            }
         }
 
         // Close
@@ -95,27 +39,84 @@
         }
     }
 
-    // Wrapper for the tooltip content
-    @if $enable-tooltip-body {
-        .tooltip-body {
-            max-width: $tooltip-max-width;
-            padding: $tooltip-padding-y $tooltip-padding-x;
-            color: $tooltip-color;
-            text-align: center;
-            background-color: $tooltip-bg;
-            @include border-radius($tooltip-border-radius);
-        }
-    }
-
     // Arrow base
     @if $enable-tooltip-arrow {
         .tooltip-arrow {
             position: absolute;
-            width: 0;
-            height: 0;
+            display: block;
+            width: $tooltip-arrow-width;
+            height: $tooltip-arrow-height;
             border-color: transparent;
             border-style: solid;
-            border-width: $tooltip-arrow-width;
         }
+    }
+
+    // Directions
+    @if $enable-tooltip-arrow {
+        .cfw-tooltip-top {
+            padding: $tooltip-arrow-height 0;
+
+            .tooltip-arrow {
+                bottom: 0;
+                border-width: $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
+                border-top-color: $tooltip-arrow-color;
+            }
+        }
+        .cfw-tooltip-right {
+            padding: 0 $tooltip-arrow-height;
+
+            .tooltip-arrow {
+                left: 0;
+                width: $tooltip-arrow-height;
+                height: $tooltip-arrow-width;
+                border-width: ($tooltip-arrow-width / 2) $tooltip-arrow-height ($tooltip-arrow-width / 2) 0;
+                border-right-color: $tooltip-arrow-color;
+            }
+        }
+        .cfw-tooltip-bottom {
+            padding: $tooltip-arrow-height 0;
+
+            .tooltip-arrow {
+                top: 0;
+                border-width: 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
+                border-bottom-color: $tooltip-arrow-color;
+            }
+        }
+        .cfw-tooltip-left {
+            padding: 0 $tooltip-arrow-height;
+
+            .tooltip-arrow {
+                right: 0;
+                width: $tooltip-arrow-height;
+                height: $tooltip-arrow-width;
+                border-width: ($tooltip-arrow-width / 2) 0 ($tooltip-arrow-width / 2) $tooltip-arrow-height;
+                border-left-color: $tooltip-arrow-color;
+            }
+        }
+
+        .cfw-tooltip-auto {
+            &[x-placement^="top"] {
+                @extend .cfw-tooltip-top;
+            }
+            &[x-placement^="right"] {
+                @extend .cfw-tooltip-right;
+            }
+            &[x-placement^="bottom"] {
+                @extend .cfw-tooltip-bottom;
+            }
+            &[x-placement^="left"] {
+                @extend .cfw-tooltip-left;
+            }
+        }
+    }
+
+    // Wrapper for the tooltip content
+    .tooltip-body {
+        max-width: $tooltip-max-width;
+        padding: $tooltip-padding-y $tooltip-padding-x;
+        color: $tooltip-color;
+        text-align: center;
+        background-color: $tooltip-bg;
+        @include border-radius($tooltip-border-radius);
     }
 }
