--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1189,6 +1189,7 @@ $tooltip-arrow-color:           $tooltip-bg !default;
 // =====
 $popover-font-size:             .9375rem !default;
 $popover-bg:                    $component-bg !default;
+$popover-margin:                .125rem !default;
 $popover-max-width:             rem(288px) !default;  // 288px=>18rem
 $popover-border-width:          $border-width !default;
 $popover-border-color:          $component-overlay-border-color !default;
@@ -1213,7 +1214,8 @@ $popover-body-padding-x:        .75rem !default;
 
 $popover-body-color:            $body-color !default;
 
-$popover-arrow-width:           .625rem !default;
+$popover-arrow-width:           1.25rem !default;
+$popover-arrow-height:          .625rem !default;
 $popover-arrow-color:           $popover-bg !default;
 $popover-arrow-outer-color:     $popover-border-color !default;
 
