--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -21,7 +21,7 @@
         display: none; // none by default, but block on "open" of the menu
         min-width: $dropdown-min-width;
         padding: $dropdown-padding-y 0;
-        margin: $dropdown-spacer 0 0; // override default ul
+        margin: $dropdown-spacer 0; // override default ul
         @include font-size($dropdown-font-size);
         color: $dropdown-color;
         text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
@@ -43,7 +43,7 @@
         > .dropdown-menu {
             top: 0;
             left: 100%;
-            margin-top: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
+            margin-top: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$dropdown-border-width});
         }
 
         > a,
@@ -71,7 +71,7 @@
     // }
 
     // Allow for menus to go left - aligning to right side of the control
-    .dropdown-menu-reverse {
+    .dropdown-reverse {
         .dropdown-menu {
             right: 0;
             left: auto;
@@ -85,7 +85,7 @@
         > .dropdown-menu {
             right: auto;
             left: 100%;
-            margin-right: -($border-width * 2);
+            margin-right: -($dropdown-border-width * 2);
             margin-left: 0;
         }
     }
@@ -95,7 +95,7 @@
             right: 100%;
             left: auto;
             margin-right: 0;
-            margin-left: -($border-width * 2);
+            margin-left: -($dropdown-border-width * 2);
         }
     }
 
@@ -214,9 +214,19 @@
                     top: auto;
                     bottom: 0;
                     margin-top: 0;
-                    margin-bottom: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
+                    margin-bottom: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$dropdown-border-width});
                 }
             }
+        }
+    }
+
+    // When using Popper, reset basic dropdown position
+    // stylelint-disable-next-line no-duplicate-selectors
+    .dropdown-menu,
+    .dropdown-submenu > .dropdown-menu {
+        &[x-placement] {
+            right: auto;
+            bottom: auto;
         }
     }
 
